Create recipes and add first recipe page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes Site</title>
+    <title>Odin Recipes Homepage</title>
   </head>
 
   <body>
