Change lasagna references to pizza in pizza.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Odin Recipes Lasagna Recipe</title>
+  <title>Odin Recipes Pizza Recipe</title>
 </head>
 <body>
-  <h1>Lasagna</h1>
+  <h1>Pizza</h1>
 </body>
 </html>
