Populate page structure for pizza.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,5 +7,33 @@
 <body>
   <a href="../index.html">Home</a>
   <h1>Pizza</h1>
+  <img src="../images/pizza.svg" alt="A cartoon depiction of a slice of pizza." width="250">
+  <h2>Description</h2>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aliquam natus. Excepturi pariatur deleniti, tenetur consequuntur reprehenderit soluta harum atque repudiandae maxime assumenda natus, aut dolorem, eligendi repellendus inventore vitae.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nesciunt commodi nobis natus fugiat. Cupiditate iure veritatis quibusdam sed dicta optio deleniti quam accusantium, veniam debitis? Possimus odit tenetur dolorem.
+  </p>
+
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem doloremque deleniti magnam sint sed delectus dolores tempora rerum harum perspiciatis sunt repudiandae autem, reiciendis blanditiis ab, nulla modi porro nam.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eos repudiandae repellendus ad quo, officiis mollitia sequi vitae quisquam. Autem soluta vel fuga fugit, ut quisquam earum temporibus vitae reprehenderit.
+  </p>
+
+  <h2>Ingredients</h2>
+  <ul>
+    <li>Tomato Sauce</li>
+    <li>Mozzarrella Cheese</li>
+    <li>Pepperoni</li>
+    <li>Pre-Made Pizza Dough</li>
+  </ul>
+
+  <h2>Steps</h2>
+  <ol>
+    <li>Pre-heat oven to 350 degrees.</li>
+    <li>Roll out dough into a circular pan.</li>
+    <li>Spread even layer of sauce onto the dough.</li>
+    <li>Sprinkle even layer of cheese atop sauce.</li>
+    <li>Add pepperonis to taste.</li>
+  </ol>
 </body>
 </html>
