Add hamburger image & link pages for hamburger to homepage

--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <a href="../index.html">Home</a>
-  <h1>Pizza</h1>
-  <img src="../images/pizza.svg" alt="A cartoon depiction of a slice of pizza." width="250">
+  <h1>Hamburger</h1>
+  <img src="../images/hamburger.svg" alt="A hamburger." width="250">
   <h2>Description</h2>
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aliquam natus. Excepturi pariatur deleniti, tenetur consequuntur reprehenderit soluta harum atque repudiandae maxime assumenda natus, aut dolorem, eligendi repellendus inventore vitae.
