--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="styles.css">
   <title>Odin Recipes Hamburger Recipe</title>
 </head>
 <body>
