Style recipe pages

--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -10,12 +10,12 @@
   <h1>Hamburger</h1>
   <img src="../images/hamburger.svg" alt="A hamburger." width="250">
   <h2>Description</h2>
-  <p>
+  <p class="content-para">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aliquam natus. Excepturi pariatur deleniti, tenetur consequuntur reprehenderit soluta harum atque repudiandae maxime assumenda natus, aut dolorem, eligendi repellendus inventore vitae.
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nesciunt commodi nobis natus fugiat. Cupiditate iure veritatis quibusdam sed dicta optio deleniti quam accusantium, veniam debitis? Possimus odit tenetur dolorem.
   </p>
 
-  <p>
+  <p class="content-para">
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem doloremque deleniti magnam sint sed delectus dolores tempora rerum harum perspiciatis sunt repudiandae autem, reiciendis blanditiis ab, nulla modi porro nam.
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eos repudiandae repellendus ad quo, officiis mollitia sequi vitae quisquam. Autem soluta vel fuga fugit, ut quisquam earum temporibus vitae reprehenderit.
   </p>
